backend/check_output_utf8.txt
cargo : warning: 
unused import: `crate
::pages::engine_cab_l
ayout::EngineCabLayou
t`
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding 
utf8 
check_output_utf8.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (warning   
 : unused...ngine    
CabLayout`:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
  --> frontend\src\ap
p.rs:13:5
   |
13 | use crate::pages
::engine_cab_layout::
EngineCabLayout;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^
   |
   = note: `#[warn(un
used_imports)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: `StoryNode`
 --> frontend\src\pag
es\play_mode.rs:2:34
  |
2 | use common::exper
t::{StoryGraph, 
StoryNode};
  |                  
                
^^^^^^^^^

warning: unused 
variable: `history`
  --> frontend\src\pa
ges\play_mode.rs:19:1
0
   |
19 |     let 
(history, 
set_history) = signal
(Vec::<String>::new()
); // Log of events
   |          
^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_history`
   |
   = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: 
`ask_pete_frontend` 
(lib) generated 3 
warnings (run `cargo 
fix --lib -p 
ask_pete_frontend` 
to apply 2 
suggestions)
    Checking 
ask_pete_backend 
v0.1.0 (C:\Users\Trin
ity\Documents\daydrea
m\Day_Dream\backend)
error[E0277]: the 
trait bound 
`AsyncPlugin: 
Plugins<_>` is not 
satisfied
   --> backend\src\ma
in.rs:64:21
    |
 64 |     app.add_plu
gins(bevy_defer::Asyn
cPlugin::default_sett
ings()); // [NEW] - 
Added bevy_defer
    |         
----------- ^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^ the 
trait `bevy::bevy_app
::plugin::sealed::Plu
gins<_>` is not 
implemented for 
`AsyncPlugin`
    |         |
    |         
required by a bound 
introduced by this 
call
    |
note: there are 
multiple different 
versions of crate 
`bevy_app` in the 
dependency graph
   --> C:\Users\Trini
ty\.cargo\registry\sr
c\index.crates.io-194
9cf8c6b5b557f\bevy_ap
p-0.14.2\src\plugin.r
s:146:5
    |
146 |       pub 
trait 
Plugins<Marker> {
    |       ^^^^^^^^^
^^^^^^^^^^^^^^^^ 
this is the required 
trait
    |
   ::: backend\src\ma
in.rs:3:5
    |
  3 |   use 
bevy::prelude::{App 
as BevyApp, 
MinimalPlugins, 
Name, Update};
    |       ---- one 
version of crate 
`bevy_app` used 
here, as a 
dependency of crate 
`bevy_internal`
...
 64 |       app.add_p
lugins(bevy_defer::As
yncPlugin::default_se
ttings()); // [NEW] 
- Added bevy_defer
    |                
       ---------- 
one version of crate 
`bevy_app` used 
here, as a 
dependency of crate 
`bevy_internal`
    |
   ::: C:\Users\Trini
ty\.cargo\registry\sr
c\index.crates.io-194
9cf8c6b5b557f\bevy_de
fer-0.14.0\src\lib.rs
:146:1
    |
146 |   pub struct 
AsyncPlugin {
    |   -------------
--------- this type 
doesn't implement 
the required trait
    |
   ::: C:\Users\Trini
ty\.cargo\registry\sr
c\index.crates.io-194
9cf8c6b5b557f\bevy_ap
p-0.16.1\src\app.rs:3
2:1
    |
 32 | / bevy_ecs::def
ine_label!(
 33 | |     /// A 
strongly-typed class 
of labels used to 
identify an [`App`].
 34 | |     #[diagnos
tic::on_unimplemented
(
 35 | |         note 
= "consider 
annotating `{Self}` 
with `#[derive(AppLab
el)]`"
...   |
 38 | |     
APP_LABEL_INTERNER
 39 | | );
    | |_- this is 
the found trait
    = help: you can 
use `cargo tree` to 
explore your 
dependency tree
    = note: required 
for `AsyncPlugin` to 
implement 
`Plugins<_>`
note: required by a 
bound in `bevy::prelu
de::App::add_plugins`
   --> C:\Users\Trini
ty\.cargo\registry\sr
c\index.crates.io-194
9cf8c6b5b557f\bevy_ap
p-0.14.2\src\app.rs:5
43:52
    |
543 |     pub fn 
add_plugins<M>(&mut 
self, plugins: impl 
Plugins<M>) -> &mut 
Self {
    |                
                     
               
^^^^^^^^^^ required 
by this bound in 
`App::add_plugins`

For more information 
about this error, 
try `rustc --explain 
E0277`.
error: could not 
compile 
`ask_pete_backend` 
(bin 
"ask_pete_backend") 
due to 1 previous 
error
